--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Wickii</title>
-    <base href="/" />
-
+    <title>Wickii</title>
+    <!-- Remove this base tag since we're using HashRouter -->
+    <!-- <base href="/" /> -->
   </head>
   <body>
     <div id="root"></div>
